--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "devDependencies": {
     "eslint": "^8.46.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.0"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "mongose": "^0.0.2-security"
+    "express": "^4.18.2",
+    "mongoose": "^7.4.2"
   },
   "name": "express-mesto-gha",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
@@ -15,6 +16,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
