--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "eslint-plugin-import": "^2.28.0"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^7.4.2"
   },
@@ -16,7 +15,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint",
+    "lint": "npx eslint ./express-mesto-gha",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
