--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint ./express-mesto-gha",
+    "lint": "npx eslint ./**/*.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
