--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "devDependencies": {
     "eslint": "^8.46.0",
-    "nodemon": "^3.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.0"
+    "eslint-plugin-import": "^2.28.0",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "validator": "^13.11.0"
   },
   "name": "express-mesto-gha",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
