--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "validator-js": "^0.2.1"
   },
   "name": "express-mesto-gha",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
