--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
     "validator": "^13.11.0",
