--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
-    "validator": "^13.11.0",
-    "validator-js": "^0.2.1"
+    "validator": "^13.11.0"
   },
   "name": "express-mesto-gha",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
